# cypress

./: .gitignore  ISSUES.md  README.md  TODO.md  pyproject.toml  requirements.txt  setup.py
src/cypress/: __main__.py  app.py  graphbuilder.py  utils.py
src/cypress/__editor/graph/: core.py  executable.py  script.py
src/cypress/app/: consolewidget.py  core.py  editor_builder.py  graph.py  utils.py
src/cypress/app/example_sessions/: wavelet.json
src/cypress/app/hotkeys/: hotkey_functions.py  hotkeys.json
src/cypress/app/nodes/: __init__.py  chain.py  image.py  input.py  jupyter.py  output.py  script.py
src/cypress/app/scripts/: embed_context.py.format
src/cypress/editor/: editor.py
src/cypress/editor/graph/: core.py  executable.py
src/cypress/editor/node/: abc.py  color.py  image.py  script.py
src/cypress/editor/nodes/: script.py
src/cypress/graph_editor/: builder.py  editor.py  graph.py  utils.py
src/cypress/node/: color_unit.py  script_node.py
