[tool.poetry]
name = "cypress"
version = "0.1.0"
description = ""
authors = ["Grayson Miller <grayson.miller124@gmail.com>"]
readme = "README.md"
packages = [{include = "cypress", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.23.5"
matplotlib = "^3.6.2"

qt-py = "^1.3.8"
nodegraphqt = {git = "https://github.com/jchanvfx/NodeGraphQt.git"}
qtconsole = {git = "https://github.com/jupyter/qtconsole.git"}

pyside2 = {version = "^5.15.2.1", extras = ["pyside2"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cypress = "cypress.__main__:main"
cyp = "cypress.__main__:main"